# fxmesampler

./: .gitignore  .gitmodules  CMakeLists.txt  MakeMapping.py  README.md  SimpleSampler.code-workspace  SimpleSampler.jucer
.github/workflows/: release.yml
ExampleKits/Century/: CenturyDrums.jucer
ExampleKits/Century/Data/presets/: Detuned.xml  Distorded.xml  Eighties.xml  TinyNDelay.xml
ExampleKits/Century/Data/wav/: mapping.xml  mappings.xml
ExampleKits/FakeAmbixKit/: TestDrums.jucer
ExampleKits/FakeAmbixKit/Data/: mapping.xml
ExampleKits/FakeAmbixKit/Data/Presets/: Chamber.xml
ExampleKits/PurpleStudioDrums/: PurpleStudioDrums.jucer
ExampleKits/PurpleStudioDrums/Data/presets/: Detuned.xml  Eighties.xml  Heavy.xml  Range.xml  ShortNDry.xml  TinyNDelayed.xml
ExampleKits/PurpleStudioDrums/Data/wav/: mapping.xml  mappingb.xml
Kits/BlackWidow/: BlackWidow.jucer  CMakeLists.txt
Kits/BlackWidow/data/: mapping.xml
Kits/BlackWidow/data/Presets/: Canyon.xml  Detune+Reverb.xml  Factory.xml  Jungle.xml  NaturalAcoustic.xml  Reverbered.xml  Saturation.xml  Shorty.xml  ShortyNDelay.xml  Tiy.xml  Wide.xml  WideNFat.xml
Kits/BlackWidow/data/img/: BlackWidow_BlackBackground_notes.xcf
Kits/Century/: CMakeLists.txt  CenturyDrums.jucer
Kits/Century/Data/presets/: Blurr.xml  DetunedNProcessed.xml  Heavy.xml  Range.xml  ShortNDry.xml
PurpleStudioDrums/: PurpleStudioDrums.jucer
PurpleStudioDrums/Data/wav/: MakeMapping.py  mapping.xml
PurpleStudioDrums/Data/wav/peaks/: imp_church.wav.reapeaks
Source/: AmbixToMS.cpp  AmbixToMS.h  Compressor.cpp  Compressor.h  CompressorComponent.cpp  CompressorComponent.h  ConvolReverb.cpp  ConvolReverb.h  ConvolReverbComponent.cpp  ConvolReverbComponent.h  EffectChain.cpp  EffectChain.h  EffectChainComponent.cpp  EffectChainComponent.h  EffectChainDelay.cpp  EffectChainDelay.h  EffectChainDelayComponent.cpp  EffectChainDelayComponent.h  EffectChainDynamics.cpp  EffectChainDynamics.h  EffectChainDynamicsComponent.cpp  EffectChainDynamicsComponent.h  EffectChainReverb.cpp  EffectChainReverb.h  EffectChainReverbComponent.cpp  EffectChainReverbComponent.h  Equalizer.cpp  Equalizer.h  EqualizerComponent.cpp  EqualizerComponent.h  FxmeSlider.cpp  FxmeSlider.h  Knob.cpp  Knob.h  Mixer.cpp  Mixer.h  MixerComponent.cpp  MixerComponent.h  MixerStripComponents.cpp  MixerStripComponents.h  (+30 more)
TestDrums/: TestDrums.jucer
TestDrums/Data/: mapping.xml
TestDrums/Presets/: Hall.xml
Tools/: MStoLR.py  MakeMappingTransdetect.py  atoms_transient_detector.py
doc/: readme_au_tester.md
packaging/windows/: installer.nsi
